# Q-G

./: README.md  docker-compose.yml  pyproject.toml  ТЗ.md
app/: main.py  models.py  question_gen.py
backend/: Dockerfile  pyproject.toml
backend/app/: database.py  db_models.py  main.py  models.py  question_gen.py
